<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/menu_search_title"
        app:showAsAction="never" />

    <item android:id="@+id/action_record"
        android:title="@string/startRecording"
        android:orderInCategory="200"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:orderInCategory="300"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_logout"
        android:title="@string/sign_out"
        android:orderInCategory="300"
        app:showAsAction="never"
        />
</menu>