<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.msbs.android.asik.ui.home.HomeFragment"
        android:label="@string/home_title_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.msbs.android.asik.ui.aboutus.AboutUsFragment"
        android:label="@string/menu_aboutus_title"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.msbs.android.asik.ui.users.UserDisplayDetailsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_recordings"
        android:name="com.msbs.android.asik.ui.recordings.SavedAudioFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>